k8s/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: otus-ms-hw-apigw
