k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/health/?$ /health break;
      rewrite ^/version/?$ /version break;
      rewrite ^/otusapp/([A-Za-z]+)/* /hello/$1/test break;
      return 404;
  name: hello-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 9000
  ingressClassName: nginx
